Issue #3391395: Component Fixes

--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_view_display.block_content.provus_heading.default.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_view_display.block_content.provus_heading.default.yml
@@ -16,7 +16,7 @@ bundle: provus_heading
 mode: default
 content:
   field_provus_alignment:
-    type: list_default
+    type: list_key
     label: hidden
     settings: {  }
     third_party_settings: {  }
