--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_form_display.block_content.provus_button.default.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_form_display.block_content.provus_button.default.yml
@@ -3,6 +3,7 @@ status: true
 dependencies:
   config:
     - block_content.type.provus_button
+    - field.field.block_content.provus_button.field_provus_button_arrangement
     - field.field.block_content.provus_button.field_provus_links
   module:
     - ala
@@ -11,6 +12,12 @@ targetEntityType: block_content
 bundle: provus_button
 mode: default
 content:
+  field_provus_button_arrangement:
+    type: options_select
+    weight: 27
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_provus_links:
     type: ala_field_widget
     weight: 26
