--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_view_display.block_content.provus_button.default.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_view_display.block_content.provus_button.default.yml
@@ -3,14 +3,23 @@ status: true
 dependencies:
   config:
     - block_content.type.provus_button
+    - field.field.block_content.provus_button.field_provus_button_arrangement
     - field.field.block_content.provus_button.field_provus_links
   module:
     - ala
+    - options
 id: block_content.provus_button.default
 targetEntityType: block_content
 bundle: provus_button
 mode: default
 content:
+  field_provus_button_arrangement:
+    type: list_key
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
+    region: content
   field_provus_links:
     type: ala
     label: hidden
@@ -23,6 +32,7 @@ content:
       url_plain: false
       rel: 0
       target: 0
+      ala_link_view_icon_position: left
     third_party_settings: {  }
     weight: 0
     region: content
