Issue-3398601: Add basic seo modules * simple_sitemap * metatag

--- a/composer.json
+++ b/composer.json
@@ -90,8 +90,10 @@
         "drupal/layout_builder_restrictions": "2.19",
         "drupal/linkit": "6.1.0",
         "drupal/menu_block": "dev-1.x",
+        "drupal/metatag": "^2.0",
         "drupal/pathauto": "1.11",
         "drupal/section_library": "1.1.1",
+        "drupal/simple_sitemap": "^4.1",
         "drupal/sitemap": "dev-2.x",
         "drupal/slick": "2.10",
         "drupal/smart_date": "4.0.3",
