--- a/web/profiles/provus/modules/custom/provus_ext/provus_news/config/install/core.entity_form_display.node.provus_news.default.yml
+++ b/web/profiles/provus/modules/custom/provus_ext/provus_news/config/install/core.entity_form_display.node.provus_news.default.yml
@@ -3,6 +3,7 @@ status: true
 dependencies:
   config:
     - field.field.node.provus_news.body
+    - field.field.node.provus_news.field_metatag
     - field.field.node.provus_news.field_provus_media_files
     - field.field.node.provus_news.field_provus_media_image
     - field.field.node.provus_news.field_provus_publish_date
@@ -10,6 +11,7 @@ dependencies:
   module:
     - datetime
     - media_library
+    - metatag
     - path
     - text
 id: node.provus_news.default
@@ -32,6 +34,14 @@ content:
     weight: 6
     region: content
     settings: {  }
+    third_party_settings: {  }
+  field_metatag:
+    type: metatag_firehose
+    weight: 26
+    region: content
+    settings:
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   field_provus_media_files:
     type: media_library_widget
@@ -65,6 +75,11 @@ content:
     region: content
     settings:
       display_label: true
+    third_party_settings: {  }
+  simple_sitemap:
+    weight: 10
+    region: content
+    settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
