--- a/web/profiles/provus/modules/custom/provus_ext/provus_faq/config/install/core.entity_view_display.node.provus_faq_page.default.yml
+++ b/web/profiles/provus/modules/custom/provus_ext/provus_faq/config/install/core.entity_view_display.node.provus_faq_page.default.yml
@@ -3,9 +3,11 @@ status: true
 dependencies:
   config:
     - field.field.node.provus_faq_page.body
+    - field.field.node.provus_faq_page.field_metatag
     - field.field.node.provus_faq_page.field_provus_faq_groups
     - node.type.provus_faq_page
   module:
+    - metatag
     - text
     - user
 id: node.provus_faq_page.default
@@ -19,6 +21,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 101
+    region: content
+  field_metatag:
+    type: metatag_empty_formatter
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 6
     region: content
   field_provus_faq_groups:
     type: entity_reference_entity_view
