--- a/web/profiles/provus/modules/custom/provus_ext/provus_landing_page/config/install/core.entity_form_display.node.provus_landing_page.default.yml
+++ b/web/profiles/provus/modules/custom/provus_ext/provus_landing_page/config/install/core.entity_form_display.node.provus_landing_page.default.yml
@@ -3,9 +3,11 @@ status: true
 dependencies:
   config:
     - field.field.node.provus_landing_page.body
+    - field.field.node.provus_landing_page.field_metatag
     - field.field.node.provus_landing_page.layout_builder__layout
     - node.type.provus_landing_page
   module:
+    - metatag
     - path
     - text
 id: node.provus_landing_page.default
@@ -29,6 +31,14 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_metatag:
+    type: metatag_firehose
+    weight: 26
+    region: content
+    settings:
+      sidebar: true
+      use_details: true
+    third_party_settings: {  }
   path:
     type: path
     weight: 30
@@ -41,6 +51,11 @@ content:
     region: content
     settings:
       display_label: true
+    third_party_settings: {  }
+  simple_sitemap:
+    weight: 10
+    region: content
+    settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
