--- a/web/profiles/provus/modules/custom/provus_ext/provus_landing_page/config/install/core.entity_view_display.node.provus_landing_page.default.yml
+++ b/web/profiles/provus/modules/custom/provus_ext/provus_landing_page/config/install/core.entity_view_display.node.provus_landing_page.default.yml
@@ -3,12 +3,14 @@ status: true
 dependencies:
   config:
     - field.field.node.provus_landing_page.body
+    - field.field.node.provus_landing_page.field_metatag
     - field.field.node.provus_landing_page.layout_builder__layout
     - node.type.provus_landing_page
   module:
     - bootstrap_layout_builder
     - layout_builder
     - layout_builder_restrictions
+    - metatag
     - text
     - user
 third_party_settings:
@@ -72,7 +74,7 @@ third_party_settings:
           remove_gutters: '0'
           context_mapping: {  }
         components:
-          540c7ce4-1661-47d1-ab08-0c6c5ea2227e:
+          -
             uuid: 540c7ce4-1661-47d1-ab08-0c6c5ea2227e
             region: blb_region_col_1
             configuration:
@@ -86,6 +88,21 @@ third_party_settings:
               formatter:
                 type: text_default
                 label: hidden
+                settings: {  }
+                third_party_settings: {  }
+            weight: 0
+            additional: {  }
+          -
+            uuid: 9f40291a-ec92-4683-84e5-56516e587b3a
+            region: content
+            configuration:
+              id: 'field_block:node:provus_landing_page:field_metatag'
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              formatter:
+                type: metatag_empty_formatter
+                label: above
                 settings: {  }
                 third_party_settings: {  }
             weight: 0
@@ -158,6 +175,8 @@ third_party_settings:
           - 'inline_block:provus_stat_item'
           - 'inline_block:provus_tab_item'
       whitelisted_blocks: {  }
+_core:
+  default_config_hash: t5oxT4jnZcFVSgucT6k7DvDqci5OZ5caY4ApXD6j_qo
 id: node.provus_landing_page.default
 targetEntityType: node
 bundle: provus_landing_page
@@ -169,6 +188,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 101
+    region: content
+  field_metatag:
+    type: metatag_empty_formatter
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 6
     region: content
   links:
     settings: {  }
