--- a/web/profiles/provus/modules/custom/provus_ext/provus_landing_page/config/install/core.entity_view_display.node.provus_landing_page.teaser.yml
+++ b/web/profiles/provus/modules/custom/provus_ext/provus_landing_page/config/install/core.entity_view_display.node.provus_landing_page.teaser.yml
@@ -4,6 +4,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.provus_landing_page.body
+    - field.field.node.provus_landing_page.field_metatag
     - field.field.node.provus_landing_page.layout_builder__layout
     - node.type.provus_landing_page
   module:
@@ -21,4 +22,5 @@ content:
 hidden:
   addtoany: true
   body: true
+  field_metatag: true
   layout_builder__layout: true
