--- a/web/profiles/provus/modules/custom/provus_ext/provus_news/config/install/core.entity_view_display.node.provus_news.teaser.yml
+++ b/web/profiles/provus/modules/custom/provus_ext/provus_news/config/install/core.entity_view_display.node.provus_news.teaser.yml
@@ -4,6 +4,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.provus_news.body
+    - field.field.node.provus_news.field_metatag
     - field.field.node.provus_news.field_provus_media_files
     - field.field.node.provus_news.field_provus_media_image
     - field.field.node.provus_news.field_provus_publish_date
@@ -31,6 +32,7 @@ content:
     region: content
 hidden:
   addtoany: true
+  field_metatag: true
   field_provus_media_files: true
   field_provus_media_image: true
   field_provus_publish_date: true
