--- a/web/profiles/provus/modules/custom/provus_ext/provus_person/config/install/core.entity_form_display.node.provus_person.default.yml
+++ b/web/profiles/provus/modules/custom/provus_ext/provus_person/config/install/core.entity_form_display.node.provus_person.default.yml
@@ -3,6 +3,7 @@ status: true
 dependencies:
   config:
     - field.field.node.provus_person.body
+    - field.field.node.provus_person.field_metatag
     - field.field.node.provus_person.field_provus_email
     - field.field.node.provus_person.field_provus_fname
     - field.field.node.provus_person.field_provus_lname
@@ -13,6 +14,7 @@ dependencies:
     - node.type.provus_person
   module:
     - media_library
+    - metatag
     - path
     - telephone
     - text
@@ -36,6 +38,14 @@ content:
     weight: 10
     region: content
     settings: {  }
+    third_party_settings: {  }
+  field_metatag:
+    type: metatag_firehose
+    weight: 26
+    region: content
+    settings:
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   field_provus_email:
     type: email_default
@@ -101,6 +111,11 @@ content:
     region: content
     settings:
       display_label: true
+    third_party_settings: {  }
+  simple_sitemap:
+    weight: 10
+    region: content
+    settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
