--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,7 @@
         "drupal/admin_toolbar": "3.4.1",
         "drupal/ala": "2.5",
         "drupal/auto_entitylabel": "3.0",
+        "drupal/better_exposed_filters": "^6.0",
         "drupal/blazy": "2.18",
         "drupal/bootstrap_barrio": "5.5.12",
         "drupal/bootstrap_layout_builder": "2.1.2",
@@ -92,6 +93,7 @@
         "drupal/menu_block": "dev-1.x",
         "drupal/metatag": "^2.0",
         "drupal/pathauto": "1.11",
+        "drupal/search_api": "^1.30",
         "drupal/section_library": "1.1.1",
         "drupal/simple_sitemap": "^4.1",
         "drupal/sitemap": "dev-2.x",
