--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_large_banner.field_provus_media_image.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_large_banner.field_provus_media_image.yml
@@ -11,7 +11,7 @@ entity_type: block_content
 bundle: provus_large_banner
 label: 'Media Image'
 description: ''
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
