--- a/web/profiles/provus/config/install/views.view.provus_basic_search.yml
+++ b/web/profiles/provus/config/install/views.view.provus_basic_search.yml
@@ -368,6 +368,7 @@ display:
           min_length: null
           fields:
             - body
+            - rendered_landing_page
             - title
         type:
           id: type
