Issue 3409922: Change testimonial block labels

--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_testimonial.field_provus_testimonial_body.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_testimonial.field_provus_testimonial_body.yml
@@ -8,7 +8,7 @@ id: block_content.provus_testimonial.field_provus_testimonial_body
 field_name: field_provus_testimonial_body
 entity_type: block_content
 bundle: provus_testimonial
-label: 'Testimonial body'
+label: 'Testimonial content'
 description: ''
 required: true
 translatable: false
