--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_testimonial.field_provus_testimonial_name.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_testimonial.field_provus_testimonial_name.yml
@@ -8,7 +8,7 @@ id: block_content.provus_testimonial.field_provus_testimonial_name
 field_name: field_provus_testimonial_name
 entity_type: block_content
 bundle: provus_testimonial
-label: 'Testimonial name'
+label: 'Full name / Header title'
 description: ''
 required: true
 translatable: false
