--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_testimonial.field_provus_testimonial_role.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_testimonial.field_provus_testimonial_role.yml
@@ -8,7 +8,7 @@ id: block_content.provus_testimonial.field_provus_testimonial_role
 field_name: field_provus_testimonial_role
 entity_type: block_content
 bundle: provus_testimonial
-label: 'Testimonial role'
+label: 'Role / Position / Sub header'
 description: ''
 required: true
 translatable: false
