--- a/web/profiles/provus/modules/custom/provus_ext/provus_landing_page/config/install/core.entity_view_display.node.provus_landing_page.default.yml
+++ b/web/profiles/provus/modules/custom/provus_ext/provus_landing_page/config/install/core.entity_view_display.node.provus_landing_page.default.yml
@@ -75,7 +75,6 @@ third_party_settings:
           context_mapping: {  }
         components:
           -
-            uuid: 540c7ce4-1661-47d1-ab08-0c6c5ea2227e
             region: blb_region_col_1
             configuration:
               id: 'field_block:node:provus_landing_page:body'
@@ -93,7 +92,6 @@ third_party_settings:
             weight: 0
             additional: {  }
           -
-            uuid: 9f40291a-ec92-4683-84e5-56516e587b3a
             region: content
             configuration:
               id: 'field_block:node:provus_landing_page:field_metatag'
@@ -140,6 +138,7 @@ third_party_settings:
           - provus_stat_group
           - provus_tabs
           - provus_testimonial
+          - webform
         'Inline blocks':
           - 'inline_block:provus_accordion'
           - 'inline_block:provus_basic_text'
@@ -162,6 +161,7 @@ third_party_settings:
           - 'inline_block:provus_stat_group'
           - 'inline_block:provus_tabs'
           - 'inline_block:provus_testimonial'
+          - 'inline_block:webform'
       restricted_categories:
         - 'Content fields'
         - Help
@@ -176,7 +176,6 @@ third_party_settings:
           - 'inline_block:provus_tab_item'
       whitelisted_blocks: {  }
 _core:
-  default_config_hash: t5oxT4jnZcFVSgucT6k7DvDqci5OZ5caY4ApXD6j_qo
 id: node.provus_landing_page.default
 targetEntityType: node
 bundle: provus_landing_page
@@ -204,3 +203,4 @@ content:
 hidden:
   addtoany: true
   layout_builder__layout: true
+  search_api_excerpt: true
