Issue 3413237: Add icon left card and list.

--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/auto_entitylabel.settings.block_content.provus_list_item.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/auto_entitylabel.settings.block_content.provus_list_item.yml
@@ -1,5 +1,5 @@
 status: 1
-pattern: '[block_content:field_provus_list_text] (List Item) - [random:number]'
+pattern: '[block_content:field_provus_title] (List Item) - [random:number]'
 escape: false
 preserve_titles: false
 dependencies:
