--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/provus_core.displays.card_settings.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/provus_core.displays.card_settings.yml
@@ -22,3 +22,6 @@ displays:
   provus_card_basic_plus:
     name: 'Basic Plus'
     cardstyle: {  }
+  provus_card_icon_left:
+    name: 'Icon Left'
+    cardstyle: {  }
