--- a/web/profiles/provus/modules/custom/provus_core/config/install/provus_core.displays.node_settings.yml
+++ b/web/profiles/provus/modules/custom/provus_core/config/install/provus_core.displays.node_settings.yml
@@ -236,7 +236,7 @@ displays:
             trim_options:
               text: false
               trim_zero: false
-          third_party_settings: { }
+          third_party_settings: {  }
           region: content
       image:
         field: field_provus_media_image
@@ -246,7 +246,7 @@ displays:
           settings:
             image_link: ''
             image_style: provus_portrait_medium
-          third_party_settings: { }
+          third_party_settings: {  }
           weight: 0
           region: content
     overrides:
@@ -259,7 +259,7 @@ displays:
             settings:
               timezone_override: ''
               date_format: 'F j, Y'
-            third_party_settings: { }
+            third_party_settings: {  }
             weight: 1
             region: content
       provus_person:
@@ -268,8 +268,8 @@ displays:
           options:
             type: basic_string
             label: hidden
-            settings: { }
-            third_party_settings: { }
+            settings: {  }
+            third_party_settings: {  }
             weight: 0
             region: content
         telephone:
@@ -279,7 +279,7 @@ displays:
             label: hidden
             settings:
               title: ''
-            third_party_settings: { }
+            third_party_settings: {  }
             weight: 0
             region: content
   provus_event_mini:
@@ -400,6 +400,40 @@ displays:
             count_per_item: true
             occurrence_format_type: provus_event_date
             same_end_date_format_type: provus_event_date
+          third_party_settings: {  }
+          weight: 0
+          region: content
+  provus_card_icon_left:
+    content:
+      body:
+        field: body
+        options:
+          label: hidden
+          type: smart_trim
+          weight: 0
+          settings:
+            trim_length: 300
+            trim_type: chars
+            trim_suffix: ...
+            wrap_class: trimmed
+            more_text: More
+            more_class: more-link
+            summary_handler: full
+            wrap_output: false
+            more_link: false
+            trim_options:
+              text: false
+              trim_zero: false
+          third_party_settings: {  }
+          region: content
+      image:
+        field: field_provus_media_image
+        options:
+          type: media_thumbnail
+          label: hidden
+          settings:
+            image_link: ''
+            image_style: provus_icon
           third_party_settings: {  }
           weight: 0
           region: content
