--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_view_display.block_content.provus_list_item.default.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_view_display.block_content.provus_list_item.default.yml
@@ -3,17 +3,26 @@ status: true
 dependencies:
   config:
     - block_content.type.provus_list_item
+    - field.field.block_content.provus_list_item.field_provus_body
     - field.field.block_content.provus_list_item.field_provus_icon
     - field.field.block_content.provus_list_item.field_provus_link
-    - field.field.block_content.provus_list_item.field_provus_list_text
+    - field.field.block_content.provus_list_item.field_provus_title
   module:
     - fontawesome
     - link
+    - text
 id: block_content.provus_list_item.default
 targetEntityType: block_content
 bundle: provus_list_item
 mode: default
 content:
+  field_provus_body:
+    type: text_default
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
+    region: content
   field_provus_icon:
     type: fontawesome_icon_formatter
     label: hidden
@@ -34,13 +43,13 @@ content:
     third_party_settings: {  }
     weight: 2
     region: content
-  field_provus_list_text:
+  field_provus_title:
     type: string
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 1
+    weight: 0
     region: content
 hidden:
   entitygroupfield: true
