--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_list_item.field_provus_title.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_list_item.field_provus_title.yml
@@ -3,14 +3,14 @@ status: true
 dependencies:
   config:
     - block_content.type.provus_list_item
-    - field.storage.block_content.field_provus_list_text
-id: block_content.provus_list_item.field_provus_list_text
-field_name: field_provus_list_text
+    - field.storage.block_content.field_provus_title
+id: block_content.provus_list_item.field_provus_title
+field_name: field_provus_title
 entity_type: block_content
 bundle: provus_list_item
-label: Text
+label: Title
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
