--- a/web/profiles/provus/config/install/block.block.provus_bootstrap_account_menu.yml
+++ b/web/profiles/provus/config/install/block.block.provus_bootstrap_account_menu.yml
@@ -6,11 +6,12 @@ dependencies:
   module:
     - system
   theme:
-    - bootstrap_barrio
+    - provus_bootstrap
+_core:
 id: provus_bootstrap_account_menu
 theme: provus_bootstrap
 region: secondary_menu
-weight: 0
+weight: -8
 provider: null
 plugin: 'system_menu_block:account'
 settings:
