--- a/web/profiles/provus/config/install/block.block.provus_bootstrap_googletranslator.yml
+++ b/web/profiles/provus/config/install/block.block.provus_bootstrap_googletranslator.yml
@@ -7,8 +7,8 @@ dependencies:
     - provus_bootstrap
 id: provus_bootstrap_googletranslator
 theme: provus_bootstrap
-region: featured_top
-weight: 0
+region: secondary_menu
+weight: -9
 provider: null
 plugin: google_translator
 settings:
