3419647: Update person content node.

--- a/web/profiles/provus/config/install/block.block.provus_bootstrap_page_title.yml
+++ b/web/profiles/provus/config/install/block.block.provus_bootstrap_page_title.yml
@@ -1,8 +1,11 @@
 langcode: en
 status: true
 dependencies:
+  module:
+    - system
   theme:
-    - bootstrap_barrio
+    - provus_bootstrap
+_core:
 id: provus_bootstrap_page_title
 theme: provus_bootstrap
 region: title
@@ -14,4 +17,8 @@ settings:
   label: 'Page title'
   label_display: '0'
   provider: core
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    negate: true
+    pages: '/people/*'
