--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_form_display.block_content.provus_banner.default.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_form_display.block_content.provus_banner.default.yml
@@ -2,31 +2,33 @@ langcode: en
 status: true
 dependencies:
   config:
-    - block_content.type.provus_short_banner
-    - field.field.block_content.provus_short_banner.field_provus_background_color
-    - field.field.block_content.provus_short_banner.field_provus_body
-    - field.field.block_content.provus_short_banner.field_provus_links
-    - field.field.block_content.provus_short_banner.field_provus_media_image
-    - field.field.block_content.provus_short_banner.field_provus_sub_title
-    - field.field.block_content.provus_short_banner.field_provus_title
+    - block_content.type.provus_banner
+    - field.field.block_content.provus_banner.field_provus_background_color
+    - field.field.block_content.provus_banner.field_provus_body
+    - field.field.block_content.provus_banner.field_provus_image_position
+    - field.field.block_content.provus_banner.field_provus_links
+    - field.field.block_content.provus_banner.field_provus_media_image
+    - field.field.block_content.provus_banner.field_provus_short_banner
+    - field.field.block_content.provus_banner.field_provus_sub_title
+    - field.field.block_content.provus_banner.field_provus_title
   module:
     - ala
     - media_library
     - text
-id: block_content.provus_short_banner.default
+id: block_content.provus_banner.default
 targetEntityType: block_content
-bundle: provus_short_banner
+bundle: provus_banner
 mode: default
 content:
   field_provus_background_color:
     type: options_select
-    weight: 31
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   field_provus_body:
     type: text_textarea_with_summary
-    weight: 27
+    weight: 2
     region: content
     settings:
       rows: 9
@@ -34,9 +36,15 @@ content:
       placeholder: ''
       show_summary: false
     third_party_settings: {  }
+  field_provus_image_position:
+    type: options_select
+    weight: 5
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_provus_links:
     type: ala_field_widget
-    weight: 28
+    weight: 8
     region: content
     settings:
       placeholder_url: ''
@@ -46,18 +54,26 @@ content:
       ala_link_icon: true
       ala_link_roles: false
       ala_link_color: false
+      ala_link_extra: false
       ala_link_target: '1'
     third_party_settings: {  }
   field_provus_media_image:
     type: media_library_widget
-    weight: 32
+    weight: 3
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
+  field_provus_short_banner:
+    type: boolean_checkbox
+    weight: 6
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   field_provus_sub_title:
     type: string_textfield
-    weight: 30
+    weight: 2
     region: content
     settings:
       size: 60
@@ -65,7 +81,7 @@ content:
     third_party_settings: {  }
   field_provus_title:
     type: string_textfield
-    weight: 29
+    weight: 1
     region: content
     settings:
       size: 60
@@ -73,7 +89,7 @@ content:
     third_party_settings: {  }
   info:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
