--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_banner.field_provus_background_color.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_banner.field_provus_background_color.yml
@@ -2,14 +2,14 @@ langcode: en
 status: true
 dependencies:
   config:
-    - block_content.type.provus_short_banner
+    - block_content.type.provus_banner
     - field.storage.block_content.field_provus_background_color
   module:
     - options
-id: block_content.provus_short_banner.field_provus_background_color
+id: block_content.provus_banner.field_provus_background_color
 field_name: field_provus_background_color
 entity_type: block_content
-bundle: provus_short_banner
+bundle: provus_banner
 label: 'Background Color'
 description: ''
 required: false
