--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_banner.field_provus_body.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_banner.field_provus_body.yml
@@ -2,21 +2,24 @@ langcode: en
 status: true
 dependencies:
   config:
-    - block_content.type.provus_large_banner
+    - block_content.type.provus_banner
     - field.storage.block_content.field_provus_body
+    - filter.format.full_html
   module:
     - text
-id: block_content.provus_large_banner.field_provus_body
+id: block_content.provus_banner.field_provus_body
 field_name: field_provus_body
 entity_type: block_content
-bundle: provus_large_banner
+bundle: provus_banner
 label: Body
 description: ''
-required: false
-translatable: true
+required: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
   display_summary: false
   required_summary: false
+  allowed_formats:
+    - full_html
 field_type: text_with_summary
