--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_banner.field_provus_media_image.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_banner.field_provus_media_image.yml
@@ -2,17 +2,17 @@ langcode: en
 status: true
 dependencies:
   config:
-    - block_content.type.provus_short_banner
+    - block_content.type.provus_banner
     - field.storage.block_content.field_provus_media_image
     - media.type.image
-id: block_content.provus_short_banner.field_provus_media_image
+id: block_content.provus_banner.field_provus_media_image
 field_name: field_provus_media_image
 entity_type: block_content
-bundle: provus_short_banner
-label: 'Banner Image'
+bundle: provus_banner
+label: 'Banner image'
 description: ''
-required: false
-translatable: true
+required: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
