--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.storage.block_content.field_provus_image_position.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.storage.block_content.field_provus_image_position.yml
@@ -11,11 +11,14 @@ type: list_string
 settings:
   allowed_values:
     -
-      value: right
-      label: Right
+      value: full
+      label: full
     -
       value: left
-      label: Left
+      label: left
+    -
+      value: right
+      label: right
   allowed_values_function: ''
 module: options
 locked: false
