Revert "Issue #3432651 by aastrong, Luukyb, nx2611: Issue #3432651 by aastrong, Luukyb: Single Banner Component."
This reverts commit 05f817e7c3f63e0e0c02cba96314901359e0b40a.

--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_short_banner.field_provus_links.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_short_banner.field_provus_links.yml
@@ -2,18 +2,18 @@ langcode: en
 status: true
 dependencies:
   config:
-    - block_content.type.provus_banner
+    - block_content.type.provus_short_banner
     - field.storage.block_content.field_provus_links
   module:
     - link
-id: block_content.provus_banner.field_provus_links
+id: block_content.provus_short_banner.field_provus_links
 field_name: field_provus_links
 entity_type: block_content
-bundle: provus_banner
+bundle: provus_short_banner
 label: Links
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
