--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.storage.block_content.field_provus_image_position.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.storage.block_content.field_provus_image_position.yml
@@ -11,14 +11,11 @@ type: list_string
 settings:
   allowed_values:
     -
-      value: full
-      label: full
+      value: right
+      label: Right
     -
       value: left
-      label: left
-    -
-      value: right
-      label: right
+      label: Left
   allowed_values_function: ''
 module: options
 locked: false
