--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/block_content.type.provus_large_banner.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/block_content.type.provus_large_banner.yml
@@ -1,7 +1,7 @@
 langcode: en
 status: true
 dependencies: {  }
-id: provus_banner
-label: Banner
+id: provus_large_banner
+label: 'Large Banner'
 revision: 0
 description: ''
