--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_form_display.block_content.provus_short_banner.default.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_form_display.block_content.provus_short_banner.default.yml
@@ -2,33 +2,31 @@ langcode: en
 status: true
 dependencies:
   config:
-    - block_content.type.provus_banner
-    - field.field.block_content.provus_banner.field_provus_background_color
-    - field.field.block_content.provus_banner.field_provus_body
-    - field.field.block_content.provus_banner.field_provus_image_position
-    - field.field.block_content.provus_banner.field_provus_links
-    - field.field.block_content.provus_banner.field_provus_media_image
-    - field.field.block_content.provus_banner.field_provus_short_banner
-    - field.field.block_content.provus_banner.field_provus_sub_title
-    - field.field.block_content.provus_banner.field_provus_title
+    - block_content.type.provus_short_banner
+    - field.field.block_content.provus_short_banner.field_provus_background_color
+    - field.field.block_content.provus_short_banner.field_provus_body
+    - field.field.block_content.provus_short_banner.field_provus_links
+    - field.field.block_content.provus_short_banner.field_provus_media_image
+    - field.field.block_content.provus_short_banner.field_provus_sub_title
+    - field.field.block_content.provus_short_banner.field_provus_title
   module:
     - ala
     - media_library
     - text
-id: block_content.provus_banner.default
+id: block_content.provus_short_banner.default
 targetEntityType: block_content
-bundle: provus_banner
+bundle: provus_short_banner
 mode: default
 content:
   field_provus_background_color:
     type: options_select
-    weight: 4
+    weight: 31
     region: content
     settings: {  }
     third_party_settings: {  }
   field_provus_body:
     type: text_textarea_with_summary
-    weight: 2
+    weight: 27
     region: content
     settings:
       rows: 9
@@ -36,15 +34,9 @@ content:
       placeholder: ''
       show_summary: false
     third_party_settings: {  }
-  field_provus_image_position:
-    type: options_select
-    weight: 5
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_provus_links:
     type: ala_field_widget
-    weight: 8
+    weight: 28
     region: content
     settings:
       placeholder_url: ''
@@ -54,26 +46,18 @@ content:
       ala_link_icon: true
       ala_link_roles: false
       ala_link_color: false
-      ala_link_extra: false
       ala_link_target: '1'
     third_party_settings: {  }
   field_provus_media_image:
     type: media_library_widget
-    weight: 3
+    weight: 32
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
-  field_provus_short_banner:
-    type: boolean_checkbox
-    weight: 6
-    region: content
-    settings:
-      display_label: true
-    third_party_settings: {  }
   field_provus_sub_title:
     type: string_textfield
-    weight: 2
+    weight: 30
     region: content
     settings:
       size: 60
@@ -81,7 +65,7 @@ content:
     third_party_settings: {  }
   field_provus_title:
     type: string_textfield
-    weight: 1
+    weight: 29
     region: content
     settings:
       size: 60
@@ -89,7 +73,7 @@ content:
     third_party_settings: {  }
   info:
     type: string_textfield
-    weight: 0
+    weight: -5
     region: content
     settings:
       size: 60
