--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_view_display.block_content.provus_short_banner.default.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/core.entity_view_display.block_content.provus_short_banner.default.yml
@@ -2,22 +2,20 @@ langcode: en
 status: true
 dependencies:
   config:
-    - block_content.type.provus_banner
-    - field.field.block_content.provus_banner.field_provus_background_color
-    - field.field.block_content.provus_banner.field_provus_body
-    - field.field.block_content.provus_banner.field_provus_image_position
-    - field.field.block_content.provus_banner.field_provus_links
-    - field.field.block_content.provus_banner.field_provus_media_image
-    - field.field.block_content.provus_banner.field_provus_short_banner
-    - field.field.block_content.provus_banner.field_provus_sub_title
-    - field.field.block_content.provus_banner.field_provus_title
+    - block_content.type.provus_short_banner
+    - field.field.block_content.provus_short_banner.field_provus_background_color
+    - field.field.block_content.provus_short_banner.field_provus_body
+    - field.field.block_content.provus_short_banner.field_provus_links
+    - field.field.block_content.provus_short_banner.field_provus_media_image
+    - field.field.block_content.provus_short_banner.field_provus_sub_title
+    - field.field.block_content.provus_short_banner.field_provus_title
   module:
     - ala
     - options
     - text
-id: block_content.provus_banner.default
+id: block_content.provus_short_banner.default
 targetEntityType: block_content
-bundle: provus_banner
+bundle: provus_short_banner
 mode: default
 content:
   field_provus_background_color:
@@ -32,14 +30,7 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 1
-    region: content
-  field_provus_image_position:
-    type: list_key
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    weight: 4
+    weight: 2
     region: content
   field_provus_links:
     type: ala
@@ -48,14 +39,13 @@ content:
       trim_length: ''
       ala_link_view_class: element
       ala_link_view_icon: inside
-      ala_link_view_icon_position: left
       ala_link_view_roles: hide
       url_only: false
       url_plain: false
       rel: 0
       target: 0
     third_party_settings: {  }
-    weight: 0
+    weight: 3
     region: content
   field_provus_media_image:
     type: entity_reference_entity_view
@@ -63,16 +53,6 @@ content:
     settings:
       view_mode: default
       link: false
-    third_party_settings: {  }
-    weight: 2
-    region: content
-  field_provus_short_banner:
-    type: boolean
-    label: hidden
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
     third_party_settings: {  }
     weight: 5
     region: content
@@ -82,7 +62,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 2
+    weight: 1
     region: content
   field_provus_title:
     type: string
@@ -92,5 +72,4 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
-hidden:
-  search_api_excerpt: true
+hidden: {  }
