--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_large_banner.field_provus_title.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/field.field.block_content.provus_large_banner.field_provus_title.yml
@@ -2,16 +2,16 @@ langcode: en
 status: true
 dependencies:
   config:
-    - block_content.type.provus_banner
+    - block_content.type.provus_large_banner
     - field.storage.block_content.field_provus_title
-id: block_content.provus_banner.field_provus_title
+id: block_content.provus_large_banner.field_provus_title
 field_name: field_provus_title
 entity_type: block_content
-bundle: provus_banner
+bundle: provus_large_banner
 label: Title
 description: ''
-required: true
-translatable: false
+required: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
