--- a/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_large_banner.yml
+++ b/web/profiles/provus/modules/custom/provus_core/provus_blocks/config/install/image.style.provus_large_banner.yml
@@ -4,7 +4,7 @@ dependencies:
   module:
     - focal_point
 name: provus_large_banner
-label: Banner
+label: 'Large Banner'
 effects:
   8e510469-f876-4de7-b6cc-70bf6adffb50:
     uuid: 8e510469-f876-4de7-b6cc-70bf6adffb50
