3443541: Update core and contribs to latest.

--- a/composer.json
+++ b/composer.json
@@ -60,54 +60,54 @@
     "require": {
         "composer/installers": "1.12",
         "cweagans/composer-patches": "1.7.3",
-        "drupal/addtoany": "2.0.4",
-        "drupal/admin_toolbar": "3.4.1",
+        "drupal/addtoany": "2.0.5",
+        "drupal/admin_toolbar": "3.4.2",
         "drupal/ala": "2.5",
         "drupal/auto_entitylabel": "3.0",
         "drupal/better_exposed_filters": "^6.0",
-        "drupal/blazy": "2.18",
-        "drupal/bootstrap_barrio": "5.5.12",
+        "drupal/blazy": "2.25",
+        "drupal/bootstrap_barrio": "5.5.16",
         "drupal/bootstrap_layout_builder": "2.1.2",
-        "drupal/bootstrap_sass": "5.0.6",
+        "drupal/bootstrap_sass": "5.0.10",
         "drupal/bootstrap_site_alert": "2.0.0-beta11",
-        "drupal/core": "10.1.2",
-        "drupal/core-composer-scaffold": "10.1.2",
+        "drupal/core": "10.2.5",
+        "drupal/core-composer-scaffold": "10.2.5",
         "drupal/default_content": "2.0.0-alpha2",
         "drupal/default_content_deploy": "2.0.0",
         "drupal/devel": "5.0.2",
         "drupal/entity": "1.4",
         "drupal/exclude_node_title": "1.4",
-        "drupal/focal_point": "2.0.2",
+        "drupal/focal_point": "2.0.3",
         "drupal/fontawesome": "2.26",
-        "drupal/fullcalendar_block": "1.0.4",
-        "drupal/gin": "3.0.0-rc5",
-        "drupal/gin_lb": "^1.0@RC",
-        "drupal/gin_login": "2.0.2",
-        "drupal/gin_toolbar": "1.0.0-rc3",
+        "drupal/fullcalendar_block": "1.0.5",
+        "drupal/gin": "3.0.0-rc10",
+        "drupal/gin_lb": "1.0.0-rc7",
+        "drupal/gin_login": "2.0.4",
+        "drupal/gin_toolbar": "1.0.0-rc5",
         "drupal/google_tag": "2.0.x-dev@dev",
         "drupal/google_translator": "^2.1",
-        "drupal/inline_entity_form": "1.0.0-rc15",
-        "drupal/layout_builder_browser": "1.5",
+        "drupal/inline_entity_form": "1.0.0-rc17",
+        "drupal/layout_builder_browser": "1.6",
         "drupal/layout_builder_modal": "1.2",
         "drupal/layout_builder_restrictions": "2.19",
-        "drupal/linkit": "6.1.0",
+        "drupal/linkit": "6.1.3",
         "drupal/menu_block": "dev-1.x",
         "drupal/metatag": "^2.0",
         "drupal/metatag_ai": "^1.0",
-        "drupal/pathauto": "1.11",
+        "drupal/pathauto": "1.12",
         "drupal/search_api": "^1.30",
         "drupal/section_library": "1.1.1",
         "drupal/simple_sitemap": "^4.1",
         "drupal/sitemap": "dev-2.x",
-        "drupal/slick": "2.10",
+        "drupal/slick": "2.11",
         "drupal/smart_date": "4.0.3",
-        "drupal/smart_trim": "2.1.0",
+        "drupal/smart_trim": "2.1.1",
         "drupal/toastify": "1.0.0-beta6",
-        "drupal/twig_tweak": "3.2.1",
+        "drupal/twig_tweak": "3.3.0",
         "drupal/views_bootstrap": "4.4",
         "drupal/webform": "^6.2",
         "drupaloverride/better_normalizers": "dev-master",
-        "drush/drush": "12.1.0",
+        "drush/drush": "12.5.1",
         "fontawesome/fontawesome": "6.1.0",
         "fonticonpicker/fonticonpicker--fonticonpicker": "3.1.1",
         "kenwheeler/slick": "1.6.0",
@@ -123,7 +123,7 @@
     "require-dev": {
         "dmore/behat-chrome-extension": "1.4",
         "mglaman/drupal-check": "1.4",
-        "drupal/core-dev": "10.0.9"
+        "drupal/core-dev": "10.2.5"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -174,7 +174,8 @@
                 "3033241: Cannot update the order weight using complex form widget": "https://www.drupal.org/files/issues/2021-02-15/cannot-update-weight-order-complex-widget-3033241-4.patch"
             },
             "drupal/smart_date": {
-                "3381131: Deprecated $dateFormatter property": "https://git.drupalcode.org/project/smart_date/-/merge_requests/63.patch"
+                "3381131: Deprecated $dateFormatter property": "https://git.drupalcode.org/project/smart_date/-/merge_requests/63.patch",
+                "3409287: Deprecation in Drupal 10.2: Smart Date List Item allowed values must be passed as array":  "https://git.drupalcode.org/project/smart_date/-/merge_requests/81.patch"
             }
         }
     },
